Replace Class.newInstance() with Constructor.newInstance() (#1635)